compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__tuple_bit_array_case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2250
expression: "\npub fn go(x) {\n  case x {\n    #(<<>>) -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(<<>>) -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let $ = x[0];
  if ($.bitSize === 0) {
    return 1;
  } else {
    return 2;
  }
}
