compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__tuple_multiple_bit_arrays.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2264
expression: "\npub fn go(x) {\n  let assert #(<<>>, <<1>>, <<2, 3>>) = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert #(<<>>, <<1>>, <<2, 3>>) = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = x[0];
  if ($.bitSize === 0) {
    let $1 = x[1];
    if ($1.bitSize === 8) {
      let $2 = x[2];
      if (!(
        $2.bitSize >= 8 &&
        $1.byteAt(0) === 1 &&
        $2.byteAt(0) === 2 &&
        $2.bitSize === 16 &&
        $2.byteAt(1) === 3
      )) {
        throw makeError(
          "let_assert",
          FILEPATH,
          "my/mod",
          3,
          "go",
          "Pattern match failed, no pattern matched the value.",
          { value: x, start: 18, end: 57, pattern_start: 29, pattern_end: 53 }
        )
      }
    } else {
      throw makeError(
        "let_assert",
        FILEPATH,
        "my/mod",
        3,
        "go",
        "Pattern match failed, no pattern matched the value.",
        { value: x, start: 18, end: 57, pattern_start: 29, pattern_end: 53 }
      )
    }
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 57, pattern_start: 29, pattern_end: 53 }
    )
  }
  return x;
}
