compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__tuple_multiple_bit_arrays_case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2275
expression: "\npub fn go(x) {\n  case x {\n    #(<<>>, <<1>>, <<2, 3>>) -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(<<>>, <<1>>, <<2, 3>>) -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let $ = x[0];
  if ($.bitSize === 0) {
    let $1 = x[1];
    if ($1.bitSize === 8) {
      let $2 = x[2];
      if (
        $2.bitSize >= 8 &&
        $1.byteAt(0) === 1 &&
        $2.byteAt(0) === 2 &&
        $2.bitSize === 16 &&
        $2.byteAt(1) === 3
      ) {
        return true;
      } else {
        return false;
      }
    } else {
      return false;
    }
  } else {
    return false;
  }
}
