compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__unit_with_bits_option_constant.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2511
expression: "\npub const bits = <<1, 2, 3>>\npub const more_bits = <<bits:bits-size(3)-unit(8)>>\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const bits = <<1, 2, 3>>
pub const more_bits = <<bits:bits-size(3)-unit(8)>>


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export const bits = /* @__PURE__ */ toBitArray([1, 2, 3]);

export const more_bits = /* @__PURE__ */ toBitArray([bitArraySlice(bits, 0, 24)]);
